transform.edge_crease ignores Factor when used as with hotkey #93642

Closed
opened 2021-12-04 11:39:37 +01:00 by Aivis Ozols · 15 comments

System Information
Operating system: Windows 10
Graphics card: RTX 2070

Blender Version
Broken: Blender 3.0.0
Worked: Blender 2.93 and before

Short description of error
transform.edge_crease is ignoring set Factor in Keymap settings!
If I set Factor to be 0.9 and then when I press hotkey and release it, factor value is not set on edge, this worked perfectly in previous Blender versions!
Same issue if I try to remove edge crease with Factor of -1
This worked in all previous Blender versions, and allowed for pre-defined Factor strength be set with single key press!

I added an image with keymap settings and blender version !
Video is showing how it need to function and was functioning in Blender 2.93.5 and previous versions !

blender_H2CKmSeHDf.png YL0qE50zqs.mp4

Exact steps for others to reproduce the error
Open Blender 3.0.0
Open Keymap
Make new Keymap or use existing one with " transform.edge_crease"
Set Factor to .9 in keymap settings
tick "Confirm on Release" in keymap settings
Make a Cube in viewport, enter edit mode, select edge, and Tap your new made or existing key for "transform.edge_crease"
You will see that Factor is not updated with value set in keymap settings !!!

Same process to test Factor -1, for removal of crease!

**System Information** Operating system: Windows 10 Graphics card: RTX 2070 **Blender Version** Broken: Blender 3.0.0 Worked: Blender 2.93 and before **Short description of error** transform.edge_crease is ignoring set Factor in Keymap settings! If I set Factor to be 0.9 and then when I press hotkey and release it, factor value is not set on edge, this worked perfectly in previous Blender versions! Same issue if I try to remove edge crease with Factor of -1 This worked in all previous Blender versions, and allowed for pre-defined Factor strength be set with single key press! I added an image with keymap settings and blender version ! Video is showing how it need to function and was functioning in Blender 2.93.5 and previous versions ! ![blender_H2CKmSeHDf.png](https://archive.blender.org/developer/F12688794/blender_H2CKmSeHDf.png) [YL0qE50zqs.mp4](https://archive.blender.org/developer/F12688821/YL0qE50zqs.mp4) **Exact steps for others to reproduce the error** Open Blender 3.0.0 Open Keymap Make new Keymap or use existing one with " transform.edge_crease" Set Factor to .9 in keymap settings tick "Confirm on Release" in keymap settings Make a Cube in viewport, enter edit mode, select edge, and Tap your new made or existing key for "transform.edge_crease" You will see that Factor is not updated with value set in keymap settings !!! Same process to test Factor -1, for removal of crease!
Author

Added subscriber: @Positivity

Added subscriber: @Positivity

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report.

It is strange to execute a modal operator (whose final value depends on the mouse position) with the final value pre-established.
In this case, should the operation really be modal?

I'm confirming the report as a bug as the behavior changed and because of the strangeness of a modal operation with pre-established final values.

Thanks for the report. It is strange to execute a modal operator (whose final value depends on the mouse position) with the final value pre-established. In this case, should the operation really be modal? I'm confirming the report as a bug as the behavior changed and because of the strangeness of a modal operation with pre-established final values.

This issue was referenced by f32b63ec58

This issue was referenced by f32b63ec583ce70081a1998b31470dbb74450a0f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-12-08 18:22:35 +01:00
Author

@mano-wii Hey, I finaly got to download blender 3.0.1, however, when I tested this, it still won't work. Same steps that I described above with key and factor and I still can't set value with the key press !

Is this fix not in blender 3.0.1 ? or maybe I need to do something else for Factor to work in "transform.edge_crease" ???

@mano-wii Hey, I finaly got to download blender 3.0.1, however, when I tested this, it still won't work. Same steps that I described above with key and factor and I still can't set value with the key press ! Is this fix not in blender 3.0.1 ? or maybe I need to do something else for Factor to work in "transform.edge_crease" ???

Changed status from 'Resolved' to: 'Needs Developer To Reproduce'

Changed status from 'Resolved' to: 'Needs Developer To Reproduce'

In #93642#1295569, @Positivity wrote:
Is this fix not in blender 3.0.1 ? ...

To make sure try the latest daily build: https://builder.blender.org/download/

> In #93642#1295569, @Positivity wrote: > Is this fix not in blender 3.0.1 ? ... To make sure try the latest daily build: https://builder.blender.org/download/
Author

I just tested and yes, sadly it is not included in blender-3.0.1-stable+v30.dc2d18018171 it is only included in blender-3.1.0-alpha+master.0e86c60c28b6 .... :( really sad
I like working with stable versions so 3.1.0 alpha is not option :(

But Thank you, I will just wait for stable release of 3.1.0

I just tested and yes, sadly it is not included in blender-3.0.1-stable+v30.dc2d18018171 it is only included in blender-3.1.0-alpha+master.0e86c60c28b6 .... :( really sad I like working with stable versions so 3.1.0 alpha is not option :( But Thank you, I will just wait for stable release of 3.1.0
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Member

Yep, fix is not included in 3.0.1.

@mano-wii : though I go over fixes to include in LTS, this was not case entirely for the 3.0.1 corrective release [devs added fixes there themselves mostly. Whenever we do another corrective release, maybe we should define exactly who is responsible in that case]

In any case, now that 3.0.1 is out, the fix is not included (sorry), we'll have to either dare using Alpha (or wait for 3.1 release which is scheduled for March 9).
Will close (since there is not much we can do here now).

Yep, fix is not included in 3.0.1. @mano-wii : though I go over fixes to include in LTS, this was not case entirely for the 3.0.1 corrective release [devs added fixes there themselves mostly. Whenever we do another corrective release, maybe we should define exactly who is responsible in that case] In any case, now that 3.0.1 is out, the fix is not included (sorry), we'll have to either dare using Alpha (or wait for 3.1 release which is scheduled for March 9). Will close (since there is not much we can do here now).

This report is not exactly about a bug. It's about a behavior that changed in edge_crease due to a problematic change that was carelessly added in some version of 2.8x and therefore removed and limited to just a few transform modes.
I didn't really see a need for a backport.
The commit is not exactly a "Fix", it's more: "Support offset for more transform modes"

This report is not exactly about a bug. It's about a behavior that changed in edge_crease due to a problematic change that was carelessly added in some version of 2.8x and therefore removed and limited to just a few transform modes. I didn't really see a need for a backport. The commit is not exactly a "Fix", it's more: "Support offset for more transform modes"

Ooops, I don't know how that Needs Information from Developers came out!

Ooops, I don't know how that `Needs Information from Developers` came out!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93642
No description provided.