Fix T93642: value used as transform offset is ignored in some modes

If a transform operator is executed as modal and has a "value" set, that value works as an offset.

However few transform modes were supporting this.

Include more transform modes as supported.