source/blender/editors/transform/transform_mode_edge_bevelweight.c
@@ -96,7 +96,7 @@ static void applyBevelWeight(TransInfo *t, const int UNUSED(mval[2]))
   int i;
   char str[UI_MAX_DRAW_STR];
 
-  weight = t->values[0];
+  weight = t->values[0] + t->values_modal_offset[0];
 
   CLAMP_MAX(weight, 1.0f);
 
