source/blender/editors/transform/transform_mode_edge_crease.c
@@ -97,7 +97,7 @@ static void applyCrease(TransInfo *t, const int UNUSED(mval[2]))
   int i;
   char str[UI_MAX_DRAW_STR];
 
-  crease = t->values[0];
+  crease = t->values[0] + t->values_modal_offset[0];
 
   CLAMP_MAX(crease, 1.0f);
 
